--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "react": "19.1.0",
